assets/css/styles.css
html {
    color: rgb(27, 189, 27);
    background-color: black;
    font-family: 'Courier New', Courier, monospace;
    /* align-items: center; */
}

h1 {
    font-size: xx-large;
    font-weight: bold;
}

body {
    width: 800px;
    display: flex;
    flex-direction: column;
}

header, section, #output{
    margin: 1em;
    padding: 1em;
    border: solid rgb(27, 189, 27);
    text-align: center;
    border-radius: .5em;
    border-width: 2px;
}

button {
    text-decoration: none;
    background-color: black;
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: 12pt;
    color: rgb(27, 189, 27);
    border-radius: .5em;
    border: solid rgb(27, 189, 27);
    margin-bottom: 1em;
    padding: .5em;
    border-width: 2px;
}

#pref, #pass-length {
    padding: 1em;
}

#output {
    display: flex;
    flex-wrap: wrap;
}

#generate:hover {
    border-color: rgb(0, 255, 0);
    color: rgb(0, 255, 0);
    box-shadow: 0 0 .5em rgb(0, 255, 0);
    transition: all .15s ease-in-out;
}

::selection {
    background-color: rgb(33, 92, 44);
}

#output::selection {
    user-select: all;
}

@media screen and (max-width: 800px) {
    body {
        width: 100%;
    }
}

